Version: 1.2.6
Date: 2023-????????????????????????????????????????????????????????????????
  Features:
    - update [module-slot-all-type-allowed] options: Enhanced Features
---------------------------------------------------------------------------------------------------
Version: 1.2.5
Date: 2023-2-24
  Features:
    - update [author-custom-recipe-balance] options: Simplification space-exploration
---------------------------------------------------------------------------------------------------
Version: 1.2.4
Date: 2023-2-18
  Features:
    - Make some adjustments and fix some bugs
---------------------------------------------------------------------------------------------------
Version: 1.2.3
Date: 2023-2-17
  Features:
    - Add Game-start bouns items options
    - Add In-game customization to get items options(Modify the configuration to make it effective)
---------------------------------------------------------------------------------------------------
Version: 1.2.2
Date: 2023-2-15
  Features:
    - Add technology cost adjustment options
    - Adapted mod: space-exploration
---------------------------------------------------------------------------------------------------
Version: 1.1.12
Date: 2023-2-11
  Features:
    - Add Infinite Resources options
---------------------------------------------------------------------------------------------------
Version: 1.1.11
Date: 2023-2-8
  Features:
    - Add character collision_box configuration options(Similar to mod: Squeak Through, but stronger than it)
---------------------------------------------------------------------------------------------------
Version: 1.1.10
Date: 2023-2-3
  Features:
    - Adapted mod: Flow Control
    - Adapted mod: fast_trans
    - Add lamp configuration options
---------------------------------------------------------------------------------------------------
Version: 1.1.9
Date: 2023-2-1
  Features:
    - Adapted mod: miniloader