@@ -299,7 +299,7 @@ data:extend({
         type = "double-setting",
         name = "x-custom-game-satellite-performance-multiplier", -- 卫星
         setting_type = "startup",
-        default_value = 100,
+        default_value = 50,
         minimum_value = 0.01,
         maximum_value = 1000,
         order = "x-custom-game-109011"
