@@ -1,7 +1,8 @@
 Version: 1.2.6
-Date: 2023-????????????????????????????????????????????????????????????????
+Date: 2023-3-????????????????????????????????????????????????????????????????????
   Features:
     - update [module-slot-all-type-allowed] options: Enhanced Features
+    - update [author-custom-recipe-balance] options: Simplification space-exploration
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.5
 Date: 2023-2-24
